# build-containers

./: README.md
.github/workflows/: docker-publish.yml
3D-Lithium/: Dockerfile
3d-lithium/: Dockerfile
base/: Dockerfile
test/: CMakeLists.txt  Dockerfile  make_release.sh
test/src/: test_boost.cpp  test_cpp.cpp  test_eigen.cpp
test/toolchain/: ToolchainWin64.cmake
